# pymoose-community

./: .clang-format  .gitlab-ci.yml  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CheckCXXCompiler.cmake  MANIFEST.in  README.md  setup.py
.ci/: travis_build_osx.sh  travis_prepare_linux.sh  travis_prepare_osx.sh
.github/workflows/: linux.yml  osx.yml  pymoose.yml  windows.yml
.travis/: Jenkinsfile
basecode/: CMakeLists.txt  Cinfo.cpp  Cinfo.h  Conv.h  Eref.cpp  FieldElement.cpp  Finfo.cpp  Finfo.h  FuncOrder.h  HopFunc.h  Id.cpp  Id.h  MsgElement.h  ObjId.cpp  ObjId.h  OpFuncBase.cpp  OpFuncBase.h  SetGet.h  ValueFinfo.h  global.cpp  global.h  header.h  main.cpp  testGlobals.cpp
biophysics/: CMakeLists.txt  CaConc.cpp  CaConcBase.cpp  CompartmentBase.cpp  DifShell.cpp  GapJunction.cpp  HHChannel.cpp  HHChannel2D.cpp  HHChannelBase.cpp  HHGate.cpp  MarkovSolver.cpp  MgBlock.cpp  NMDAChan.cpp  Nernst.cpp  Neuron.cpp  Neuron.h  ReadCell.cpp  ReadSwc.cpp  Spine.cpp  SynChan.cpp  VClamp.cpp  testBiophysics.cpp
builtins/: CMakeLists.txt  Func.cpp  Func.h  Function.cpp  Function.h  MooseParser.cpp  MooseParser.h  SocketStreamer.cpp  Streamer.cpp  StreamerBase.cpp  StreamerBase.h  TableBase.cpp  TableBase.h  testBuiltins.cpp
cmake/: install_dep.cmake  install_wheel.py.in  pymoose_install.cmake  setup.py.in
devel/: CMakeLists.txt
devel/issues/: Makefile  issue_379.py  issue_93.py
device/: CMakeLists.txt
diffusion/: CMakeLists.txt  testDiffusion.cpp
examples/: CMakeLists.txt
hsolve/: CMakeLists.txt  HSolveActive.cpp  HSolveActive.h  HSolvePassive.cpp  HSolveUtils.cpp
intfire/: AdExIF.cpp  CMakeLists.txt  ExIF.cpp  IzhIF.cpp
kinetics/: CMakeLists.txt  Pool.cpp  PoolBase.cpp  ReadKkit.cpp  testKinetics.cpp
ksolve/: CMakeLists.txt  FuncTerm.cpp  FuncTerm.h  Gsolve.cpp  Gsolve.h  GssaVoxelPools.cpp  GssaVoxelPools.h  Ksolve.cpp  SteadyState.cpp  SteadyState.h  Stoich.cpp  Stoich.h  VoxelPools.cpp  VoxelPools.h  VoxelPoolsBase.cpp  VoxelPoolsBase.h  testKsolve.cpp
mesh/: CMakeLists.txt  CylBase.cpp  CylMesh.cpp  EndoMesh.cpp  PsdMesh.cpp  SpineEntry.cpp  testMesh.cpp
mpi/: CMakeLists.txt  proc.cpp
msg/: CMakeLists.txt  SparseMsg.cpp  SparseMsg.h
pybind11/: CMakeLists.txt  DestFinfo.h  Finfo.cpp  Finfo.h  Finfo.hpp  MooseVec.cpp  MooseVec.h  PyRun.cpp  PyRun.h  Vec.hpp  __init__.py  helper.cpp  helper.h  pymoose.cpp  pymoose.h
pymoose/: CMakeLists.txt  melement.cpp  moosemodule.cpp  pymoose.cpp  pymoose.h  test_pybind_moose.py  vec.cpp
python/: setup.py
python/moose/: __init__.py  fixXreacs.py  flask.py  lems.py  model_utils.py  moose.py  network_utils.py  recording.py  server.py  utils.py  wrapper.py
python/moose/SBML/: readSBML.py
python/moose/chemMerge/: merge.py
python/moose/chemUtil/: add_Delete_ChemicalSolver.py  chemConnectUtil.py
python/moose/genesis/: writeKkit.py
python/moose/neuroml/: MorphML.py  NetworkML.py  NeuroML.py  __init__.py
python/moose/neuroml2/: reader.py  test_reader.py  test_reader2.py
python/rdesigneur/: rdesigneur.py
python/server/: moose.conf  moose.wsgi  moose_flask.py  sockets.py
randnum/: CMakeLists.txt
scheduling/: CMakeLists.txt  Clock.cpp  Clock.h
scripts/: build_pypi.sh  setup.wheel.py
shell/: CMakeLists.txt  LoadModels.cpp  Neutral.cpp  Neutral.h  Shell.cpp  Shell.h  Wildcard.cpp  Wildcard.h
signeur/: CMakeLists.txt
synapse/: CMakeLists.txt  GraupnerBrunel2012CaPlasticitySynHandler.cpp  SeqSynHandler.cpp
tests/: CMakeLists.txt
tests/benchmarks/: micro_benchmark.sh
tests/core/: chan_proto.py  test_difshells.py  test_dose_response.py  test_hsolve_externalCalcium.py  test_rdesigneur_random_syn_input.py  test_steady_state_solver.py  test_streamer.py
tests/py_moose/: test_GraupnerBrunel2012_STDPfromCaPlasticity.py  test_Xreacs2.py  test_api.py  test_connectionLists.py  test_dose_response.py  test_expr_parser.py  test_function_controls_reac_rate.py  test_kkit.py  test_moose_attribs.py  test_moose_paths.py  test_pymoose_2.py  test_suit1.py  test_synchan.py  test_vec.py
tests/py_rdesigneur/: test_21_vclamp.py  test_74_travelling_osc.py  test_76_func_func_control_reac_rates.py
tests/pybind11/: test_api.py  test_function.py  test_pybind_moose.py  test_shell.py  test_shell2.py  test_shell3.py
tests/python/: test_expr_parser.py  testhsolve+swc_invalid.py
tests/rdesigneur/: test_rdes_with_func_proto.py
tests/support/: test_neuroml.py  test_neuroml2.py  test_nml_run_cell.py  test_nml_run_hhcell.py
tests/support/_neuroml/: FvsI_CA1.py
tests/support/nml_files/: LEMS_passiveCell.xml
utility/: CMakeLists.txt  Vec.cpp  cnpy.cpp  cnpy.hpp  numutil.h  print_function.hpp  strutil.cpp  strutil.h  testing_macros.hpp  utility.h
